# OpenCV-V4L2-directFormat

./: CMakeCache.txt  CMakeLists.txt  OpenCV_V4L2_directFormat_Config.h.in  README.md  hol-libv4l2.txt  hol-v4l2.txt  main-cv.cpp  main-mod.cpp
OpenCV_V4L2_directFormat_videoio/: CMakeLists.txt  cap.cpp  cap_v4l-diag.cpp  cap_v4l-nodiag.cpp  precomp.hpp
OpenCV_V4L2_directFormat_videoio/opencv2/: retrieve.hpp  videoio_mod.hpp
